# ChangeLog for media-sound/herrie
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/herrie/ChangeLog,v 1.32 2009/05/10 20:18:27 ssuominen Exp $

*herrie-2.2 (10 May 2009)

  10 May 2009; Samuli Suominen <ssuominen@gentoo.org> +herrie-2.2.ebuild,
  +files/herrie-2.2-libxspf.patch:
  Version bump with libxspf patch wrt #261928, thanks to Sebastian Pipping.

  14 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> herrie-2.1.ebuild:
  Fix build dependencies.

*herrie-2.1 (31 Aug 2008)

  31 Aug 2008; Robert Buchholz <rbu@gentoo.org> -herrie-1.8.3.ebuild,
  +herrie-2.1.ebuild:
  Version bump, bug #234152 by Tim Harder. Notable upstream changes:
   * Added: -p switch to start playback on startup - Phillip Warner
   * Added: 'F' button to jump to files in the file browser

  19 Jun 2008; Christian Faulhammer <opfer@gentoo.org> herrie-2.0.2.ebuild:
  stable x86, bug 227107

  16 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> herrie-2.0.2.ebuild:
  sparc stable, bug #227107

  16 Jun 2008; nixnut <nixnut@gentoo.org> herrie-2.0.2.ebuild:
  Stable on ppc wrt bug 227107

  15 Jun 2008; Santiago M. Mola <coldwind@gentoo.org> herrie-2.0.2.ebuild:
  amd64 stable wrt bug #227107

  26 Apr 2008; nixnut <nixnut@gentoo.org> herrie-2.0.ebuild:
  Stable on ppc wrt bug 218645

*herrie-2.0.2 (23 Apr 2008)

  23 Apr 2008; Robert Buchholz <rbu@gentoo.org> -herrie-2.0.1.ebuild,
  +herrie-2.0.2.ebuild:
  Version bump, bug fixes for the ALSA volume manager.

  22 Apr 2008; Raúl Porcel <armin76@gentoo.org> herrie-2.0.ebuild:
  x86 stable wrt #218645

  20 Apr 2008; Robert Buchholz <rbu@gentoo.org> herrie-2.0.ebuild:
  amd64 stable, bug 218645

*herrie-2.0.1 (20 Apr 2008)

  20 Apr 2008; Robert Buchholz <rbu@gentoo.org> -herrie-1.9.2.ebuild,
  +herrie-2.0.1.ebuild:
  Version bump, introducing ALSA volume support (thanks to armin76 for
  notifying).

*herrie-2.0 (16 Mar 2008)
