@@ -1,10 +1,6 @@
-AUX herrie-1.8-chost.patch 547 RMD160 77f7506ee0b3f4eceeeb3b43a020086fba6739ac SHA1 89c2200eeb55a2c56f83c0ad67ebe371e559a7b6 SHA256 07371e7b5feff1f2b9a1cce1875be9def54c478084f2635a30bdcc8e6333f2f2
 AUX herrie-2.2-libxspf.patch 2959 RMD160 cf32a5c6458498f46d80b41c10ec3001854dd19e SHA1 988ad8493c6fd31112017b171589f9343a236080 SHA256 ab87541a31ff42b8ce27b1a3e1e9e987e288de522f31b01caee7753dfd9052e7
-DIST herrie-2.0.2.tar.bz2 69971 RMD160 e91ae93d54ce8039828fb24a1a56ad691de6ed73 SHA1 0d3bffb5fa592945995ab34d0611f563a9bae100 SHA256 f2d8286c802f089bc7b5c5557e2097be6c10add72c982b55bf491ac32c30708b
-DIST herrie-2.1.tar.bz2 70592 RMD160 638561a51aad2ee46a5915dc0ff921e5468218d3 SHA1 da9f0838826954066abe9900e618ed8ad4da85ca SHA256 7a581c423d92e7bfde5c4795fc04ef7061f4368ad3c55ea281ff1b8ac9be0598
+AUX herrie-chost_issue.patch 547 RMD160 77f7506ee0b3f4eceeeb3b43a020086fba6739ac SHA1 89c2200eeb55a2c56f83c0ad67ebe371e559a7b6 SHA256 07371e7b5feff1f2b9a1cce1875be9def54c478084f2635a30bdcc8e6333f2f2
 DIST herrie-2.2.tar.bz2 71596 RMD160 e0f70ca4d867cf6cdbb452bd0f0860ef1f5a9f39 SHA1 ae5c39be11aeb19898cd3f968580eafc623830b7 SHA256 142341072920f86b6eb570b8f13bf5fd87c06cf801543dc7d1a819e39eb9fb2b
-EBUILD herrie-2.0.2.ebuild 2806 RMD160 6e4af448d3fecf143b23a9fe976ebade840ba9f6 SHA1 cae519fa870e95bb5868c1b708344890b85c75a0 SHA256 42ddba330422ebe2be26ecc4e67fc7f935945fef1d994102afa18c48c7809374
-EBUILD herrie-2.1.ebuild 2819 RMD160 d7dcb9bf03a354e4c3a11159946f684927457e4f SHA1 ddd612aaf515f738a705e087b0597d7a6bfbf868 SHA256 0767f65d2b28ea4d3923fc19b26fc4e75d6b1662d67a7e6cc60c5ae242ca050a
-EBUILD herrie-2.2.ebuild 2541 RMD160 7e9d8e3f632cc46fbc5ef7e24586d2b54c75daab SHA1 ae71dc6a933c1cb313158f5a562c0e78f4d0215e SHA256 7de8849a53bf9108313f3fed9e7ac0ae2b8231e796c260074baa3f8dc75e155c
-MISC ChangeLog 5179 RMD160 b97db84bdcaf38daf9a1ae00954c546c819ec60c SHA1 db05fbfd382088cb92ace74bf55ab650e9fe501e SHA256 7e445c1e9a97bc59d300838896ea3b3233bd0fc10bb83746357777203bf63491
+EBUILD herrie-2.2.ebuild 2480 RMD160 5a8f9afd9ae01ecadb74268c8d03507ba6472cc6 SHA1 b5b7fbdfbfffacdbe810b46d85cbe0febb381bf4 SHA256 21f1d3ce4fb78b13d5c4915fb5abcfb6dd8a0bb400339df78da344abb9a083b7
+MISC ChangeLog 5441 RMD160 0dd1b63b5b4ed22af71d5bb11b4ff7d2a1defe3a SHA1 4f632f589ba5295e856e835d31e4972ef64e20ee SHA256 82e2a78a85c3953fafcd9c5e665b7f6e286635dff6438b513cbfe140f301d3f5
 MISC metadata.xml 1067 RMD160 785c43394547d03304aeaf6957e8b101508c5d20 SHA1 6fde495a04cfed75319b2d8d99b8bbc93d418598 SHA256 b12095da84b5e1012a64c3f6f957e110ede9928bee3f50022aad88a524b90973
