@@ -1,6 +1,15 @@
 # ChangeLog for media-sound/herrie
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/herrie/ChangeLog,v 1.32 2009/05/10 20:18:27 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/herrie/ChangeLog,v 1.36 2009/06/01 16:13:50 ssuominen Exp $
+
+  01 Jun 2009; Ferris McCormick <fmccor@gentoo.org> herrie-2.2.ebuild:
+  Sparc stable, required for Bug #271815.
+
+  31 May 2009; Markus Meier <maekke@gentoo.org> herrie-2.2.ebuild:
+  amd64/x86 stable, bug #271815
+
+  31 May 2009; nixnut <nixnut@gentoo.org> herrie-2.2.ebuild:
+  ppc stable #271815
 
 *herrie-2.2 (10 May 2009)
 
@@ -63,8 +72,7 @@
 *herrie-1.9.2 (20 Jan 2008)
 
   20 Jan 2008; Robert Buchholz <rbu@gentoo.org>
-  -files/herrie-1.5.1-chost.patch, -herrie-1.7-r1.ebuild,
-  -herrie-1.8.1.ebuild, +herrie-1.9.2.ebuild:
+  -herrie-1.7-r1.ebuild, -herrie-1.8.1.ebuild, +herrie-1.9.2.ebuild:
   Version bump, introducing directory search, new translations, and bug fixes.
   Clean up old versions.
 
